--- a/showexample.ipynb
+++ b/showexample.ipynb
@@ -31,7 +31,7 @@
       "text/plain": [
        "[{'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 啊 ↲ 最 终 有 一 天 ↲ 我 也 不 得 不 ↲ 在 我 后 面 ↲ 跟 一 个 陌 生 人 说 话 ↲ 他 就 是 那 个 ↲ 唱 着 歌 来 的 ↲ 唱 着 歌 来 的 ↲ 他 就 开 始 变 得 ↲ 其 实 ↲ 一 直 就 是 ↲ 一 直 到 ↲ 我 不 再 想 说 的 ↲ 也 不 再 想 说 ↲↲ 就 是 结 婚 以 后 ↲ 你 就 出 来 了 ↲ 一 个 人 ↲ 一 个 人 ↲ 在 酒 馆 里 ↲ 喝 着 茶 ↲ 聊 着 天 ↲↲ 我 就 出 来 了 ↲ 象 你 一 样 ↲ 看 着 我 ↲ 开 始 ↲ 以 来 ↲ 就 是 一 件 事 情 ↲ 桌 子 ↲ 空 着 ↲↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ ↲ 一 切 ↲ 话 ↲ ↲ ↲ ↲ ↲ ↲ 一 切 ↲ — — — —'},\n",
        " {'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 在 这 里 ↲ 最 终 的 情 感 ↲ 就 是 诗 ↲ 所 体 现 的 ↲ 最 真 的 ↲ 也 是 最 美 的 ↲ 万 物 的 本 质 ↲ 都 是 为 死 而 生 的 ↲ 他 们 都 在 这 里 ↲ 死 去 ↲ 不 死 ↲ 不 死 ↲ 也 没 有 灵 魂 ↲↲ 我 ↲ 只 好 紧 紧 ↲ 抱 着 这 一 切 ↲ 我 四 处 寻 找 ↲ 找 到 一 个 名 字 ↲ 名 字 叫 做 ↲ 故 乡 ↲ 故 乡 ↲ 的 一 切 ↲ 我 在 这 里 ↲↲ 我 们 就 要 分 手 ↲ 在 这 里 ↲ 就 要 分 手 ↲ 在 这 里 ↲ 在 这 里 ↲ 又 是 一 个 ↲ 又 是 一 个 ↲ 又 是 一 个 ↲ ↲ ↲ 那 天 ↲ 有 人 破 晓 ↲ 什 么 也 没 有 破 晓 ↲ 什 么 也 没 破 晓 ↲ — — ↲ 呵 ↲'},\n",
-       " {'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 在 这 里 ↲ 是 一 片 ↲ 辽 阔 的 大 海 ↲ 和 大 河 ↲ 我 想 ↲ 在 这 里 ↲ 会 和 许 多 人 分 享 ↲ 生 活 的 闪 耀 ↲ 以 及 ↲ 生 活 中 ↲ 所 遇 到 的 一 些 ↲ 无 法 解 释 的 问 题 ↲↲ 在 这 里 ↲ 也 会 出 现 ↲ 无 法 解 释 的 问 题 ↲ 我 想 ↲ 在 这 里 ↲ 也 会 出 现 ↲ 多 少 次 ↲ 我 自 己 ↲ 也 不 知 道 ↲ 是 出 于 什 么 原 因 ↲ 在 这 里 ↲ 会 出 现 ↲ 这 么 多 的 ↲ 不 同 的 声 音 ↲ 在 ↲ 这 里 ↲ 也 将 出 现 ↲ 多 少 次 ↲ 长 长 的 ↲ ↲ 恢 复 原 来 的 ↲ 声 音 ↲↲ 从 一 个 梦 里 ↲ 调 的 汽 车 ↲ 古 老 的 城 市 ↲ — — 古 老 的 城 市 ↲ 交 谈 的 声 音 ↲ 是 两 个 ↲ 在 中 国 的 田 野 上'}]",
+       " {'generated_text': '在各自的↲不同的象限里↲我看到生活↲总有一种↲与众不同的↲ 与 众 不 同 的 ↲ 与 众 不 同 的 ↲↲ 在 这 里 ↲ 是 一 片 ↲ 辽 阔 的 大 海 ↲ 和 大 河 ↲ 我 想 ↲ 在 这 里 ↲ 会 和 许 多 人 分 享 ↲ 生 活 的 闪 耀 ↲ 以 及 ↲ 生 活 中 ↲ 所 遇 到 的 一 些 ↲ 无 法 解 释 的 问 题 ↲↲ 在 这 里 ↲ 也 会 出 现 ↲ 无 法 解 释 的 问 题 ↲ 我 想 ↲ 在 这 里 ↲ 也 会 出 现 ↲ 多 少 次 ↲ 我 自 己 ↲ 也 不 知 道 ↲ 是 出 于 什 么 原 因 ↲ 在 这 里 ↲ 会 出 现 ↲ 这 么 多 的 ↲ 不 同 的 声 音 ↲ 在 ↲ 这 里 ↲ 也 将 出 现 ↲ 多 少 次 ↲ 长 长 的 ↲ ↲ 恢 复 原 来 的 ↲ 声 音 ↲↲ 从 一 个 梦 里 ↲ 调 的 汽 车 ↲ 古 老 的 城 市 ↲ — — 古 老 的 城 市 ↲ 交 谈 的 声 音 ↲ 是 两 个 ↲ 在 中 国 的 田 野 上'}]\n",
        " {'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 要 不 要 提 到 一 个 屋 顶 。 ↲ 没 有 人 要 做 的 人 去 ， ↲ 着 一 个 不 小 心 翼 翼 的 脚 步 ， ↲ 让 屋 子 里 的 风 向 ， ↲ 让 屋 里 和 我 们 在 屋 顶 里 走 动 ， ↲ 我 们 要 把 你 们 和 屋 顶 ， ↲ 进 了 我 们 这 样 的 就 是 不 能 发 出 的 ； ↲ 我 们 的 欢 乐 与 泪 河 一 起 ， ↲ 着 了 一 阵 雨 ， ↲ 的 心 的 一 起 ， ↲↲ 在 这 样 的 心 的 心 的 兴 奋 类 的 心 的 大 雨 的 心 里 面 前 流 下 一 的 心 的 ， ↲ ！ ↲ ， ↲ 着 着 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 汩 小 雨 ， ↲ 的 狂 风 雨 ， ↲↲ 的 ， ↲ 里 面 的 帽 ， ↲ ， ↲ 的 大 的 心 ， ↲ 过'},\n",
        " {'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 下 一 步 的 葬 礼 ， 向 下 探 出 深 山 的 边 缘 ， ↲ 不 知 为 什 么 ， 不 要 哭 喊 ， ↲ ，an 运 ， ↲ 因 为 它 们 已 经 忘 却 ， ↲ 在 屋 檐 下 ， ↲ 着 自 己 的 一 点 ， ↲ 永 远 不 要 向 前 走 了 ， ↲ 永 远 不 要 ， ↲ 永 远 不 要 这 样 痛 苦 。 ↲↲ 呵 ， 这 样 的 纠 缠 ， ↲ ！ 你 可 要 抓 住 我 ， 我 的 ──↲ 我 的 ！ ↲ ， ↲ 这 样 的 ！ ↲ 夜 莺 着 ， 这 样 要 在 这 样 的 不 要 不 要 把 我 要 说 ！ ↲ 你 就 在 这 样 的 不 要 在 那 ？ ↲ 我 不 要 我 ？ ↲ 一 乃 然 ， 不 要 把 我 的 ！ ↲ 风 吹 吧 ， 不 要 ↲ ， 不 要 紧 ， ↲ 在 我 的 不 要 不 要 不 要 诉 ， 不 要 是 这 样 的 是 ， 不 要 把 我 的 山 的 乌 鸦 雀 的 ？ ↲ute 这 样 的 ， ↲ 一 切 不'},\n",
        " {'generated_text': '没有人理解荷马的摇篮，↲没有人从拐角的墙壁，↲ 着 园 丁 的 步 伐 。 ↲↲ 风 吹 过 ， 越 来 越 清 澈 ， ↲ 山 风 的 园 林 就 要 燃 起 了 ↲ 垂 下 了 ， 平 原 的 平 原 ； ↲ 古 墙 围 着 了 一 个 古 老 的 梦 ； ↲ 着 河 底 的 乌 龟 ， ↲ 这 些 翠 绿 的 淡 水 的 翠 绿 ， ↲ 着 我 的 心 肠 ； ↲ 的 这 满 的 乌 云 ， ↲ 得 放 下 没 有 人 的 熟 练 。 ↲ ， ↲ 的 满 了 一 条 底 要 了 。 ↲ 我 的 山 的 情 ， ↲ 。 ↲ 名 ， 这 么 慢 慢 慢 慢 的 满 园 的 山 的 山 ， ↲ 的 晚 风 的 山 坡 的 露 的 熟 的 话 ； ↲ 的 一 天 上 一 天 的 山 峦 ， ↲ 的 山 的 山 的 黄 昏 黄 金 黄 昏 黄 昏 黄 昏 黄 金 黄 金 ↲ ， ↲ 。 ↲ 我 的 波 ； ↲ ； ↲ 的 ， ↲ 我 的 一 下 了 。 ↲ ； ↲ ； ↲ ； ↲ ，'}]"
@@ -74,7 +74,7 @@
     "无 边 的 黑 色 的 火 焰 ， 无 尽 的 黑 色 的 火 焰 ↲ \n",
     "我 将 在 你 的 眼 睛 里 消 失 ↲ \n",
     "在 那 的 黑 色 的 ，黑 色 的 火 焰 中 ↲ \n",
-    "在 那 无 尽 的 黑 色 的 火 焰 中 ↲ 我 的 头 颅 沉 入 黑 暗 ↲↲",
+    "在 那 无 尽 的 黑 色 的 火 焰 中 ↲ 我 的 头 颅 沉 入 黑 暗 ↲↲\n",
     "黄河啊！原始的水！原始的阴影，↲\n",
     "这粗糙的血酒！可怜的人间，不能如此，↲\n",
     "不能如此忘忧，↲\n",
@@ -210,37 +210,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_generator(\"当两颗心开始震动,当你瞳孔学会闪躲\", max_length=100, do_sample=True)\n",
-    "text_generator(\"当两颗心开始震动,当你瞳孔学会闪躲\", max_length=100, do_sample=True,     top_k=5, top_p=0.9, num_return_sequences=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_generator(\"当 两 颗 心 开 始 震 动 \", max_length=100, do_sample=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text_generator(\"当两颗心开始震动，\", max_length=100, do_sample=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/jaj/miniconda3/envs/uer/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    },
+    {
+     "ename": "OSError",
+     "evalue": "Can't load tokenizer for '/localdata/workspace/UER-py/models/clyric'. Make sure that:\n\n- '/localdata/workspace/UER-py/models/clyric' is a correct model identifier listed on 'https://huggingface.co/models'\n\n- or '/localdata/workspace/UER-py/models/clyric' is the correct path to a directory containing relevant tokenizer files\n\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOSError\u001b[0m                                   Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mtransformers\u001b[39;00m \u001b[39mimport\u001b[39;00m BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n\u001b[1;32m      2\u001b[0m \u001b[39m# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\u001b[39;00m\n\u001b[1;32m      3\u001b[0m \u001b[39m# model = GPT2LMHeadModel.from_pretrained(\"uer/gpt2-chinese-lyric\")\u001b[39;00m\n\u001b[0;32m----> 4\u001b[0m tokenizer \u001b[39m=\u001b[39m BertTokenizer\u001b[39m.\u001b[39;49mfrom_pretrained(\u001b[39m\"\u001b[39;49m\u001b[39m/localdata/workspace/UER-py/models/clyric\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m      5\u001b[0m model \u001b[39m=\u001b[39m GPT2LMHeadModel\u001b[39m.\u001b[39mfrom_pretrained(\u001b[39m'\u001b[39m\u001b[39m/localdata/workspace/UER-py/models/clyric\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m      6\u001b[0m text_generator \u001b[39m=\u001b[39m TextGenerationPipeline(model, tokenizer)\n",
+      "File \u001b[0;32m~/miniconda3/envs/uer/lib/python3.8/site-packages/transformers-4.6.1-py3.8.egg/transformers/tokenization_utils_base.py:1708\u001b[0m, in \u001b[0;36mPreTrainedTokenizerBase.from_pretrained\u001b[0;34m(cls, pretrained_model_name_or_path, *init_inputs, **kwargs)\u001b[0m\n\u001b[1;32m   1702\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mall\u001b[39m(full_file_name \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m \u001b[39mfor\u001b[39;00m full_file_name \u001b[39min\u001b[39;00m resolved_vocab_files\u001b[39m.\u001b[39mvalues()):\n\u001b[1;32m   1703\u001b[0m     msg \u001b[39m=\u001b[39m (\n\u001b[1;32m   1704\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mCan\u001b[39m\u001b[39m'\u001b[39m\u001b[39mt load tokenizer for \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpretrained_model_name_or_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m. Make sure that:\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1705\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m- \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpretrained_model_name_or_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is a correct model identifier listed on \u001b[39m\u001b[39m'\u001b[39m\u001b[39mhttps://huggingface.co/models\u001b[39m\u001b[39m'\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1706\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m- or \u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mpretrained_model_name_or_path\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m\u001b[39m is the correct path to a directory containing relevant tokenizer files\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m\n\u001b[1;32m   1707\u001b[0m     )\n\u001b[0;32m-> 1708\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mEnvironmentError\u001b[39;00m(msg)\n\u001b[1;32m   1710\u001b[0m \u001b[39mfor\u001b[39;00m file_id, file_path \u001b[39min\u001b[39;00m vocab_files\u001b[39m.\u001b[39mitems():\n\u001b[1;32m   1711\u001b[0m     \u001b[39mif\u001b[39;00m file_id \u001b[39mnot\u001b[39;00m \u001b[39min\u001b[39;00m resolved_vocab_files:\n",
+      "\u001b[0;31mOSError\u001b[0m: Can't load tokenizer for '/localdata/workspace/UER-py/models/clyric'. Make sure that:\n\n- '/localdata/workspace/UER-py/models/clyric' is a correct model identifier listed on 'https://huggingface.co/models'\n\n- or '/localdata/workspace/UER-py/models/clyric' is the correct path to a directory containing relevant tokenizer files\n\n"
+     ]
+    }
+   ],
    "source": [
     "from transformers import BertTokenizer, GPT2LMHeadModel, TextGenerationPipeline\n",
     "# tokenizer = BertTokenizer.from_pretrained(\"uer/gpt2-chinese-lyric\")\n",
@@ -259,18 +252,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/ubuntu/miniconda3/envs/uer/lib/python3.10/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/jaj/miniconda3/envs/uer/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "The tokenizer class you load from this checkpoint is not the same type as the class this function is called from. It may result in unexpected tokenization. \n",
-      "The tokenizer class you load from this checkpoint is 'CpmTokenizer'. \n",
-      "The class this function is called from is 'XLNetTokenizer'.\n",
       "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
      ]
     }
@@ -291,105 +281,54 @@
     "        text = text.replace(' ', '').replace('\\u2582', ' ').replace('\\u2583', '↲')\n",
     "        return text\n",
     "\n",
-    "tokenizer = XLNetTokenizer.from_pretrained('/data/workspace/PKU/UER-py/models/cpm')\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"/data/workspace/PKU/UER-py/models/cpm\")\n",
+    "tokenizer = XLNetTokenizer.from_pretrained('/home/jaj/workspace/UER-py/models/cpm')\n",
+    "model = GPT2LMHeadModel.from_pretrained(\"/home/jaj/workspace/UER-py/models/cpm\")\n",
     "\n",
     "text_generater = TextGenerationPipeline(model, tokenizer)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "A decoder-only architecture is being used, but right-padding was detected! For correct generation results, please set `padding_side='left'` when initializing the tokenizer.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[{'generated_text': '那不能站稳的需要一个上帝,↲偻的内心充满了仇恨。↲他以自身抨击自身,仿佛自身就是另一种面孔,↲在与这世界同在的时间里,闪着光亮,又消失不见。↲他无所不知——他席卷一切城池,仅只留下一个女人。他称她为青春的诗人并将她给他↲一同埋葬。世界碎成一堆,花朵涌现。世界碎成无数小路、摇塌、缓缓倒塌。↲我想象汹涌澎湃的悲痛和宁静象波澜一样流过,同时又象一根琴弦上的竖琴。↲↲'},\n",
-       " {'generated_text': '那不能站稳的需要一个上帝,↲偻的宇宙↲吁,赐给我权势,几何和城堡,↲和熟悉的人们深深的名姓,↲当市政工人还在街头上,↲'},\n",
-       " {'generated_text': '那不能站稳的需要一个上帝,↲偻的宇宙↲只有他理解这个路途的崎岖:↲无尽的苦楚是别人的,↲而你确是自己的上帝。↲我们都在下面,你的炮火↲从圣杯到宴会厅到酒吧间,到处是↲他们的嘴唇,他们的面孔;我们看见↲酒杯内不知谁盛了多少酒的容器,↲'}]"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "text_generater(\"那不能站稳的需要一个上帝,↲\", max_length=256, do_sample=True, use_cache=True, top_p=0.8, repetition_penalty=1.1,num_return_sequences=3)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'generated_text': '请以“梅花落满了南山”为题写一首诗：“梅花落满了南山,枝头遍插梅花”。 \\n“梅花落满了南山,枝头遍插梅花”,是说梅花是梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根,梅花的根'}]\n"
-     ]
-    }
-   ],
-   "source": [
-    "from transformers import XLNetTokenizer, GPT2LMHeadModel\n",
-    "from transformers import TextGenerationPipeline\n",
-    "import jieba\n",
-    "# add spicel process \n",
-    "class XLNetTokenizer(XLNetTokenizer):\n",
-    "    translator = str.maketrans(\" \\n\", \"\\u2582\\u2583\")\n",
-    "    def _tokenize(self, text, *args, **kwargs):\n",
-    "        text = [x.translate(self.translator) for x in jieba.cut(text, cut_all=False)]\n",
-    "        text = \" \".join(text)\n",
-    "        return super()._tokenize(text, *args, **kwargs)\n",
-    "    def _decode(self, *args, **kwargs):\n",
-    "        text = super()._decode(*args, **kwargs)\n",
-    "        text = text.replace(' ', '').replace('\\u2582', ' ').replace('\\u2583', '\\n')\n",
-    "        return text\n",
-    "\n",
-    "tokenizer = XLNetTokenizer.from_pretrained('mymusise/CPM-Generate-distill')\n",
-    "model = GPT2LMHeadModel.from_pretrained(\"mymusise/CPM-Generate-distill\")\n",
-    "\n",
-    "text_generater = TextGenerationPipeline(model, tokenizer)\n",
-    "\n",
-    "print(text_generater(\"请以“梅花落满了南山”为题写一首诗：\", max_length=256, top_k=1, use_cache=True, prefix=''))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'generated_text': '请以“梅花落满了南山”为题写一首诗： \\n山色空蒙雾雨浓,春色葭空。\\n葭苍苍白露隅,悠悠我心忧悠悠。\\n葭随风去,白露皎洁月明中。\\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。 \\n葭苍苍白露隅,悠悠我心忧悠悠。\\n葭苍苍野落尽,青枫不知晓。 \\n悠悠我心忧悠悠。 \\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。 \\n葭苍苍野落尽,青枫不知晓。\\n悠悠我心忧悠悠。\\n葭苍苍野落尽'},\n",
-       " {'generated_text': '请以“梅花落满了南山”为题写一首诗： \\n“梅花落满南山, \\n梅花落满南山。 \\n“南山”,是指南山。“南山”是指南山。 \\n“梅花落满南山”,是指南山。“梅花落满南山, \\n梅花落满南山。”这两句诗的句式是“梅花落满南山, \\n梅花落满南山。”“梅花落满南山, \\n梅花落满南山。”句式,是由句式的“梅花落满南山, \\n梅花落满南山。”, \\n和句式的“梅花落满南山, \\n梅花落满南山。” \\n这两句诗的结构是“梅花落满南山, \\n梅花落满南山。”句式,是由句式的'},\n",
-       " {'generated_text': '请以“梅花落满了南山”为题写一首诗：“梅花落满了南山”,“南山”即指南山。\\n如何看待2016年10月15日的股市分析?  【10月15日】股市分析 【10月15日】今日股市分析 【10月15日】大盘分析 【10月15日】创业板、绩优股、创业板、创业板指数 【10月15日】                                                              '}]"
+       "[{'generated_text': '不如学仙去,↲萝歌坐到一曲然后走人。↲'},\n",
+       " {'generated_text': '不如学仙去,↲萝歌舞腰,拨动裤管上的红尘↲调一曲轻盈之月夜之歌↲不拘小节地进入梦乡↲像寄生在蟋蟀声中的害虫↲悄悄爬出铁轨间密谋的笼子↲'},\n",
+       " {'generated_text': '不如学仙去,↲萝歌坐到一曲琴音里......↲'}]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text_generater(\"请以“梅花落满了南山”为题写一首诗：\", max_length=256, do_sample=True, use_cache=True, top_p=0.9, top_k=5, num_return_sequences=3)"
+    "text_generater(\"不如学仙去,↲\", max_length=256, do_sample=True, use_cache=True, top_p=0.8, repetition_penalty=1.1,num_return_sequences=3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'generated_text': \"Title: '语言' Topic: '哲思' Keywords: '语言,诗歌,上帝,无穷,蓝色' Content: 语言是一种可用来赞美的品质。↲↲有人专门收集世间的唯美谎言,↲并将它们再版,无数次被推翻。↲↲但最终被践约的却是语言自己。↲↲语言是律法,顺应了坚固的壁垒,↲它把贞洁的和美丽的都割走,↲留下铿锵的声音,花朵和花香。↲↲语言是律法,顺应了坚固的壁垒,↲它把贞洁和美丽的都割走,↲\"},\n",
+       " {'generated_text': \"Title: '语言' Topic: '哲思' Keywords: '语言,诗歌,上帝,无穷,蓝色' Content: 语言就是飞翔↲就是语言的纯粹与反复。↲↲语言就是飞翔↲就是语言自己的手掌↲在石头和铁的捶打下↲发出咔咔的响声↲就是声音↲↲语言就是飞翔↲就是语言自己的手掌↲在石头和铁的捶打下↲发出咔咔的响声↲↲语言就是飞翔↲就是语言自己的手掌↲在石头和铁的捶打下↲发出咔咔的响声↲\"},\n",
+       " {'generated_text': \"Title: '语言' Topic: '哲思' Keywords: '语言,诗歌,上帝,无穷,蓝色' Content: 语言是↲世界的赠品↲↲在这个世界上↲语言是无用的↲↲一种语言↲在这个世界上↲是没有门的↲↲一种语言↲在这个世界上↲是没有窗的↲↲一种语言↲\"}]"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "text_generater(\"Title: '语言' Topic: '哲思' Keywords: '语言,诗歌,上帝,无穷,蓝色' Content:\", max_length=256, do_sample=True, use_cache=True, top_p=0.8, top_k=5, num_return_sequences=3)"
    ]
   }
  ],
@@ -409,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.8.15"
   },
   "orig_nbformat": 4,
   "vscode": {
